--- a/models/autoencoder.ipynb
+++ b/models/autoencoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -33,6 +33,13 @@
     "        X.append(x)\n",
     "        Y.append(x**2)\n",
     "    return np.array(X,dtype=np.float32).reshape(-1,1),np.array(Y, dtype=np.float32).reshape(-1,1)\n",
+    "\n",
+    "def high_dim():\n",
+    "    X = []\n",
+    "    Y = []\n",
+    "    for x in range(100):\n",
+    "        X.append([x, x+3, x+4, x+5, x+10, x+20, x+60])\n",
+    "    return np.array(X,dtype=np.float32).reshape(-1,7), None\n",
     "\n"
    ]
   },
@@ -47,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -58,15 +65,16 @@
      "text": [
       "(?, 20)\n",
       "(?, 20)\n",
+      "(?, 4)\n",
       "(?, 20)\n",
-      "(?, 1)\n"
+      "(?, 7)\n"
      ]
     }
    ],
    "source": [
     "#input\n",
     "\n",
-    "X,Y = square_function()\n",
+    "X,Y = high_dim()\n",
     "\n",
     "batch_size = 10\n",
     "\n",
@@ -77,11 +85,9 @@
     "    return activation(b + tf.matmul(x, weights))\n",
     "\n",
     "\n",
-    "\n",
     "INPUT_SHAPE = X.shape\n",
     "\n",
-    "x = tf.placeholder(\"float\", [None,1])\n",
-    "y = tf.placeholder(\"float\", [None,1])\n",
+    "x = tf.placeholder(\"float\", [None,X.shape[1]])\n",
     "\n",
     "#simple neural network to solve the xor problem\n",
     "\n",
@@ -91,10 +97,13 @@
     "h2 = fully_connected(h1, 20)\n",
     "print(h2.get_shape())\n",
     "\n",
-    "h3 = fully_connected(h2, 20)\n",
-    "print(h2.get_shape())\n",
+    "h3 = fully_connected(h2, 4)\n",
+    "print(h3.get_shape())\n",
     "\n",
-    "out = fully_connected(tf.nn.dropout(h2, 0.5), 1)\n",
+    "h4 = fully_connected(h3, 20)\n",
+    "print(h4.get_shape())\n",
+    "\n",
+    "out = fully_connected(tf.nn.dropout(h4, 0.5), X.shape[1])\n",
     "print(out.get_shape())\n",
     "\n",
     "loss = tf.reduce_mean((out-x)**2)\n",
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -124,38 +133,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0. Epoch Loss: 16.9888 \n",
-      "40. Epoch Loss: 6.8400 \n",
-      "80. Epoch Loss: 6.1811 \n",
-      "120. Epoch Loss: 6.0960 \n",
-      "160. Epoch Loss: 2.6659 \n",
-      "200. Epoch Loss: 0.5074 \n",
-      "240. Epoch Loss: 0.6058 \n",
-      "280. Epoch Loss: 1.7008 \n",
-      "320. Epoch Loss: 1.4746 \n",
-      "360. Epoch Loss: 2.0308 \n",
-      "400. Epoch Loss: 1.4831 \n",
-      "440. Epoch Loss: 1.9276 \n",
-      "480. Epoch Loss: 3.1667 \n",
-      "520. Epoch Loss: 0.9435 \n",
-      "560. Epoch Loss: 1.9251 \n",
-      "600. Epoch Loss: 0.8479 \n",
-      "640. Epoch Loss: 1.7329 \n",
-      "680. Epoch Loss: 0.7715 \n",
-      "720. Epoch Loss: 1.4999 \n",
-      "760. Epoch Loss: 1.4522 \n",
-      "800. Epoch Loss: 2.0901 \n",
-      "840. Epoch Loss: 0.6398 \n",
-      "880. Epoch Loss: 2.6346 \n",
-      "920. Epoch Loss: 1.6160 \n",
-      "960. Epoch Loss: 3.0815 \n"
+      "0. Epoch Loss: 7357.2871 \n",
+      "40. Epoch Loss: 3047.4851 \n",
+      "80. Epoch Loss: 2939.5378 \n",
+      "120. Epoch Loss: 3175.4475 \n",
+      "160. Epoch Loss: 2284.9050 \n",
+      "200. Epoch Loss: 2348.4766 \n",
+      "240. Epoch Loss: 2704.4995 \n",
+      "280. Epoch Loss: 2209.0679 \n",
+      "320. Epoch Loss: 2424.2141 \n",
+      "360. Epoch Loss: 1861.2480 \n",
+      "400. Epoch Loss: 2161.4360 \n",
+      "440. Epoch Loss: 2320.6472 \n",
+      "480. Epoch Loss: 2161.1194 \n",
+      "520. Epoch Loss: 2184.9412 \n",
+      "560. Epoch Loss: 2203.8164 \n",
+      "600. Epoch Loss: 2038.0466 \n",
+      "640. Epoch Loss: 2097.0957 \n",
+      "680. Epoch Loss: 2111.7097 \n",
+      "720. Epoch Loss: 2093.4980 \n",
+      "760. Epoch Loss: 2078.1555 \n",
+      "800. Epoch Loss: 2049.7087 \n",
+      "840. Epoch Loss: 2054.0583 \n",
+      "880. Epoch Loss: 2039.0243 \n",
+      "920. Epoch Loss: 2036.1897 \n",
+      "960. Epoch Loss: 2034.2491 \n",
+      "1000. Epoch Loss: 2034.1201 \n",
+      "1040. Epoch Loss: 2034.1320 \n",
+      "1080. Epoch Loss: 2034.0948 \n",
+      "1120. Epoch Loss: 2034.1000 \n",
+      "1160. Epoch Loss: 2034.0997 \n",
+      "1200. Epoch Loss: 2034.0983 \n",
+      "1240. Epoch Loss: 2034.0994 \n",
+      "1280. Epoch Loss: 2034.1021 \n",
+      "1320. Epoch Loss: 2034.1067 \n",
+      "1360. Epoch Loss: 2034.1056 \n",
+      "1400. Epoch Loss: 2034.1049 \n",
+      "1440. Epoch Loss: 2034.1045 \n",
+      "1480. Epoch Loss: 2034.1042 \n",
+      "1520. Epoch Loss: 2034.1040 \n",
+      "1560. Epoch Loss: 2034.1040 \n",
+      "1600. Epoch Loss: 2034.1040 \n",
+      "1640. Epoch Loss: 2034.1040 \n",
+      "1680. Epoch Loss: 2034.1040 \n",
+      "1720. Epoch Loss: 2034.1040 \n",
+      "1760. Epoch Loss: 2034.1040 \n",
+      "1800. Epoch Loss: 2034.1040 \n",
+      "1840. Epoch Loss: 2034.1040 \n",
+      "1880. Epoch Loss: 2034.1040 \n",
+      "1920. Epoch Loss: 2034.1040 \n",
+      "1960. Epoch Loss: 2034.1040 \n",
+      "2000. Epoch Loss: 2034.1040 \n",
+      "2040. Epoch Loss: 2034.1040 \n",
+      "2080. Epoch Loss: 2034.1040 \n",
+      "2120. Epoch Loss: 2034.1040 \n",
+      "2160. Epoch Loss: 2034.1040 \n",
+      "2200. Epoch Loss: 2034.1040 \n",
+      "2240. Epoch Loss: 2034.1040 \n",
+      "2280. Epoch Loss: 2034.1040 \n",
+      "2320. Epoch Loss: 2034.1040 \n",
+      "2360. Epoch Loss: 2034.1040 \n",
+      "2400. Epoch Loss: 2034.1040 \n",
+      "2440. Epoch Loss: 2034.1040 \n",
+      "2480. Epoch Loss: 2034.1040 \n",
+      "2520. Epoch Loss: 2034.1040 \n",
+      "2560. Epoch Loss: 2034.1040 \n",
+      "2600. Epoch Loss: 2034.1040 \n",
+      "2640. Epoch Loss: 2034.1040 \n",
+      "2680. Epoch Loss: 2034.1040 \n",
+      "2720. Epoch Loss: 2034.1040 \n",
+      "2760. Epoch Loss: 2034.1040 \n",
+      "2800. Epoch Loss: 2034.1040 \n",
+      "2840. Epoch Loss: 2034.1040 \n",
+      "2880. Epoch Loss: 2034.1040 \n",
+      "2920. Epoch Loss: 2034.1040 \n",
+      "2960. Epoch Loss: 2034.1040 \n",
+      "3000. Epoch Loss: 2034.1040 \n",
+      "3040. Epoch Loss: 2034.1040 \n",
+      "3080. Epoch Loss: 2034.1040 \n"
      ]
     }
    ],
    "source": [
     "init =  tf.initialize_all_variables()\n",
     "\n",
-    "num_epochs=1000\n",
+    "num_epochs=10000\n",
     "#merge = tf.merge_all_summaries()\n",
     "\n",
     "with tf.Session() as sess:\n",
@@ -168,14 +230,11 @@
     "        for batch in range(X.shape[0]//batch_size):\n",
     "            feed_dict = {\n",
     "                x : X[batch*batch_size:batch*batch_size + batch_size],\n",
-    "                y : Y[batch*batch_size:batch*batch_size+batch_size]\n",
     "            }\n",
     "            _, lossVal = sess.run([train_step, loss], feed_dict=feed_dict)\n",
     "        #writer.add_summary(merged, epoch)\n",
     "        if(epoch%40 == 0):\n",
     "            print(\"%d. Epoch Loss: %.4f \"  %(epoch, lossVal))\n",
-    "        correct_prediction = tf.equal(tf.argmax(out, 1), tf.argmax(y, 1))\n",
-    "        accuracy = tf.reduce_mean(tf.cast(correct_prediction, \"float\"))\n",
     "        \n",
     "        "
    ]
