Trainable model, got to 80% accuracy

--- a/models/ffnn.ipynb
+++ b/models/ffnn.ipynb
@@ -127,31 +127,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0. Epoch Loss: 1486.1541 \n",
-      "40. Epoch Loss: 450.7829 \n",
-      "80. Epoch Loss: 303.3951 \n",
-      "120. Epoch Loss: 31.6976 \n",
-      "160. Epoch Loss: 175.8376 \n",
-      "200. Epoch Loss: 50.8745 \n",
-      "240. Epoch Loss: 82.4987 \n",
-      "280. Epoch Loss: 532.0878 \n",
-      "320. Epoch Loss: 148.3309 \n",
-      "360. Epoch Loss: 68.2717 \n",
-      "400. Epoch Loss: 164.4434 \n",
-      "440. Epoch Loss: 283.6068 \n",
-      "480. Epoch Loss: 167.1435 \n",
-      "520. Epoch Loss: 88.1412 \n",
-      "560. Epoch Loss: 101.6048 \n",
-      "600. Epoch Loss: 47.7822 \n",
-      "640. Epoch Loss: 30.8784 \n",
-      "680. Epoch Loss: 22.9366 \n",
-      "720. Epoch Loss: 63.8534 \n",
-      "760. Epoch Loss: 77.5416 \n",
-      "800. Epoch Loss: 167.3459 \n",
-      "840. Epoch Loss: 129.4231 \n",
-      "880. Epoch Loss: 124.2650 \n",
-      "920. Epoch Loss: 179.6036 \n",
-      "960. Epoch Loss: 36.5289 \n"
+      "WARNING:tensorflow:From <ipython-input-4-ee1d5697cf8a>:1 in <module>.: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
+      "Instructions for updating:\n",
+      "Use `tf.global_variables_initializer` instead.\n",
+      "0. Epoch Loss: 1411.2990 \n",
+      "40. Epoch Loss: 228.7079 \n",
+      "80. Epoch Loss: 344.7082 \n",
+      "120. Epoch Loss: 98.4646 \n",
+      "160. Epoch Loss: 83.2377 \n",
+      "200. Epoch Loss: 58.2299 \n",
+      "240. Epoch Loss: 548.8091 \n",
+      "280. Epoch Loss: 406.9084 \n",
+      "320. Epoch Loss: 219.5736 \n",
+      "360. Epoch Loss: 199.2819 \n",
+      "400. Epoch Loss: 197.1820 \n",
+      "440. Epoch Loss: 347.3141 \n",
+      "480. Epoch Loss: 47.6321 \n",
+      "520. Epoch Loss: 58.6024 \n",
+      "560. Epoch Loss: 163.9709 \n",
+      "600. Epoch Loss: 101.3391 \n",
+      "640. Epoch Loss: 50.3168 \n",
+      "680. Epoch Loss: 152.7810 \n",
+      "720. Epoch Loss: 42.2878 \n",
+      "760. Epoch Loss: 199.7991 \n",
+      "800. Epoch Loss: 70.7944 \n",
+      "840. Epoch Loss: 144.8642 \n",
+      "880. Epoch Loss: 54.6450 \n",
+      "920. Epoch Loss: 70.6556 \n",
+      "960. Epoch Loss: 55.8961 \n"
      ]
     }
    ],
