Added 50% dropout, but this affects performance badly on the dataset

--- a/models/voxnet.ipynb
+++ b/models/voxnet.ipynb
@@ -12,13 +12,12 @@
     "import numpy as np\n",
     "from utils.utils import voxel_grid\n",
     "import os\n",
-    "from sklearn.preprocessing import LabelBinarizer, OneHotEncoder\n",
-    "\n"
+    "from sklearn.preprocessing import LabelBinarizer, OneHotEncoder\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +57,7 @@
     "\n",
     "#Helper functions batch reading\n",
     "\n",
-    "object_csvs = list(filter(lambda x: \".csv\" in x, os.listdir(\"../dataset/objects\")))\n",
+    "object_csvs = list(filter(lambda x: \".csv\" in x, os.listdir(\"/fzi/ids/vlasteli/datasets/sidney/objects\")))\n",
     "labels = np.array(list(map(lambda x: x.split(\".\")[0], object_csvs)))\n",
     "labels = labels.reshape((-1,1))\n",
     "\n",
@@ -90,11 +89,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(?, 64, 64, 64, 1)\n",
-      "(?, 26)\n",
-      "(?, 15, 15, 15, 3)\n",
-      "(?, 10125)\n",
-      "(?, 26)\n"
+      "Input shape:  (?, 64, 64, 64, 1)\n",
+      "Labels shape:  (?, 26)\n",
+      "Conv1:  (?, 31, 31, 31, 3)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'pool3d' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-39bbc639e508>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Conv1: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconv1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_shape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mmaxpool1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpool3d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Pool1: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxpool1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_shape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pool3d' is not defined"
      ]
     }
    ],
@@ -222,9 +230,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-tensorflow-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -236,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
